test: Suppress unnecessary warning during selftest
When launching another Java VM via ForkedVM, selftest may show some
"WARNING" lines that should be skipped.

Suppress the offending lines.